fixed mobile spacing on main juniper video

--- a/src/components/pages/juniper.css
+++ b/src/components/pages/juniper.css
@@ -101,6 +101,15 @@
     align-items: center;
 }
 
+@media only screen and (max-width:825px) {
+    .videoBackground {
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 50px;
+
+    }
+}
+
 .iframeJun {
     border: 8px solid gray;
 }
